Fixed search bar alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -696,7 +696,7 @@ hr {
 }
 
 #searchbar {
-    margin-top: -32px;
+    margin-top: -35px;
 }
 
 #searchinput {
